# jsonvault

./: .gitignore  Cargo.toml  Dockerfile  INTEGRATION_COMPLETE.md  LICENSE  RAFT.md  RAFT_SUMMARY.md  README.md  Taskfile.yml  docker-compose-raft.yml  test.sh
.github/: copilot-instructions.md
benches/: benchmarks.rs
deployment/: docker-compose-raft.yml
deployment/kubernetes/: hpa.yaml  setup.sh  statefulset.yaml
docker/: docker-compose.yml  haproxy.cfg
docs/: PROJECT_STRUCTURE.md  RAFT_SUMMARY.md  RAFT_TEST_RESULTS.md  REORGANIZATION_COMPLETE.md
examples/: basic_usage.rs  raft_demo.rs
go-client/: README.md  client.go  go.mod
go-client/example/: main.go  simple.go
kubernetes/: rbac.yaml
scripts/: benchmark-raft.sh  docker-cluster.sh  quickstart.sh  test-current-implementation.sh  test-raft-cluster.sh  test-raft.sh  test-tcp-protocol.sh  test.sh
src/: client.rs  database.rs  lib.rs  network.rs  protocol.rs  raft.rs  raft_simple.rs  replication.rs  server.rs
